Edited wiki page DefaultSideBar through web user interface.

--- a/wiki/DefaultSideBar.wiki
+++ b/wiki/DefaultSideBar.wiki
@@ -1,4 +1,5 @@
   * [Overview]
+  * [VersionConcept Version Concept]
   * Components
     * [EventBroker Event Broker]
     * [StateMachine Hierarchical State Machine]
