--- a/wiki/DefaultSideBar.wiki
+++ b/wiki/DefaultSideBar.wiki
@@ -5,5 +5,6 @@
     * [StateMachine Hierarchical State Machine]
     * [EvaluationEngine Evaluation Engine]
     * [AsyncModule Asynchrous Modules]
+    * [CsvParser csv Parser]
     * [HashService Hash Service]
   * [Sponsors]
