Edited wiki page DefaultSideBar through web user interface.

--- a/wiki/DefaultSideBar.wiki
+++ b/wiki/DefaultSideBar.wiki
@@ -1,10 +1,15 @@
   * [Overview]
   * [VersionConcept Version Concept]
   * Components
-    * [EventBroker Event Broker]
-    * [StateMachine Hierarchical State Machine]
+    * Data
+      * [CsvParser csv Parser]
     * [EvaluationEngine Evaluation Engine]
-    * [AsyncModule Asynchrous Modules]
-    * [CsvParser csv Parser]
-    * [HashService Hash Service]
+    * Events
+      * [EventBroker Event Broker]
+    * [StateMachine Hierarchical State Machine]
+    * Multi-Threading
+      * [AsyncModule Asynchrous Modules]
+      * [AsyncWorker Async Worker]
+    * Security
+      * [HashService Hash Service]
   * [Sponsors]
