Edited wiki page EvaluationEngine through web user interface.

--- a/wiki/EvaluationEngine.wiki
+++ b/wiki/EvaluationEngine.wiki
@@ -1,4 +1,4 @@
-#summary Summary of the evaluation engine (still alpha)
+#summary Summary of the evaluation engine.
 #labels EvaluationEngine,Featured
 
 The evaluation engine provides an infrastructure for decoupled evaluation.
