Edited wiki page DefaultSideBar through web user interface.

--- a/wiki/DefaultSideBar.wiki
+++ b/wiki/DefaultSideBar.wiki
@@ -12,4 +12,5 @@
       * [AsyncWorker Async Worker]
     * Security
       * [HashService Hash Service]
+  * [CodingGuidelines Coding Guidelines]
   * [Sponsors]
