Edited wiki page DefaultSideBar through web user interface.

--- a/wiki/DefaultSideBar.wiki
+++ b/wiki/DefaultSideBar.wiki
@@ -13,4 +13,5 @@
     * Security
       * [HashService Hash Service]
   * [CodingGuidelines Coding Guidelines]
+  * [Build Building bbv.Common]
   * [Sponsors]
