--- a/wiki/DistributedEventBroker.wiki
+++ b/wiki/DistributedEventBroker.wiki
@@ -1,13 +1,8 @@
-#summary One-sentence summary of this page.
+#summary A powerful extension for the Event Broker which allows to fire events over process boundaries!
 
-= Introduction =
+= Features =
 
 Add your content here.
 
 
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+= Documentation =
