Edited wiki page DistributedEventBroker through web user interface.

--- a/wiki/DistributedEventBroker.wiki
+++ b/wiki/DistributedEventBroker.wiki
@@ -18,3 +18,6 @@
      * Customizable transport message
 
 = Documentation =
+For basic usage please see [EventBroker Event Broker] and [EventBrokerTutorial Event Broker Tutorial]
+
+[DistributedEventBrokerTutorial Tutorial]
