Edited wiki page DistributedEventBrokerTutorial through web user interface.

--- a/wiki/DistributedEventBrokerTutorial.wiki
+++ b/wiki/DistributedEventBrokerTutorial.wiki
@@ -15,3 +15,5 @@ eventBroker.AddDistributedExtension(distributedEventBrokerExtension);
 === NServiceBus ===
 === MassTransit ===
 === RhinoESB ===
+
+== Restrictions ==
