--- a/wiki/DistributedEventBrokerTutorial.wiki
+++ b/wiki/DistributedEventBrokerTutorial.wiki
@@ -12,17 +12,24 @@ eventBroker.AddDistributedExtension(extension);
 }}}
 
 == Transport layers ==
-The sections below are meant to serve as an introduction into the specific transport layer. For transport layer specific setup, read the documentation pages provided by the project owners.
+The sections below are not meant to serve as an introduction into the specific transport layer. For transport layer specific setup, read the documentation pages provided by the project owners.
 === NServiceBus ===
 {{{
-
 IBus bus = // Get IBus instance
 var extension = new NServiceBusDistributedEventBrokerExtension("DistributedEventBroker", bus);
 eventBroker.AddDistributedExtension(extension);
 }}}
 
-Make shure that bbv.Common.DistributedEventBroker.NServiceBusAdapter.dll is scanned by NServiceBus when auto loading of message handlers is enabled.
+Make sure that bbv.Common.DistributedEventBroker.NServiceBusAdapter.dll is scanned by NServiceBus when auto loading of message handlers is enabled.
 === MassTransit ===
+{{{
+IServiceBus serviceBus = // Get IServiceBus instance
+var extension = new MassTransitDistributedEventBrokerExtension
+("DistributedEventBroker", serviceBus);
+eventBroker.AddDistributedExtension(extension);
+}}}
+
+Make sure the `MassTransitEventFiredHandler` is registered with transient life time in the underlying container. When supported use assembly scanning functionality of container and include bbv.Common.DistributedEventBroker.MassTransitAdapter.dll in the search.
 === RhinoESB ===
 
 == Restrictions ==
