--- a/wiki/DistributedEventBrokerTutorial.wiki
+++ b/wiki/DistributedEventBrokerTutorial.wiki
@@ -20,7 +20,7 @@ var extension = new NServiceBusDistributedEventBrokerExtension("DistributedEvent
 eventBroker.AddDistributedExtension(extension);
 }}}
 
-Make sure that bbv.Common.DistributedEventBroker.NServiceBusAdapter.dll is scanned by NServiceBus when auto loading of message handlers is enabled.
+Make sure that bbv.Common.!DistributedEventBroker.NServiceBusAdapter.dll is scanned by NServiceBus when auto loading of message handlers is enabled.
 === MassTransit ===
 {{{
 IServiceBus serviceBus = // Get IServiceBus instance
@@ -29,7 +29,13 @@ var extension = new MassTransitDistributedEventBrokerExtension
 eventBroker.AddDistributedExtension(extension);
 }}}
 
-Make sure the `MassTransitEventFiredHandler` is registered with transient life time in the underlying container. When supported use assembly scanning functionality of container and include bbv.Common.DistributedEventBroker.MassTransitAdapter.dll in the search.
+Make sure the `MassTransitEventFiredHandler` is registered with transient life time in the underlying container. When supported use assembly scanning functionality of container and include bbv.Common.!DistributedEventBroker.MassTransitAdapter.dll in the search.
 === RhinoESB ===
+{{{
+IServiceBus serviceBus = // Get IServiceBus instance
+var extension = new RhinoEsbDistributedEventBrokerExtension("DistributedEventBroker", serviceBus);
+eventBroker.AddDistributedExtension(extension);
+}}}
 
+Make sure the `RhinoEsbEventFiredHandler` is registered in the windsor container.
 == Restrictions ==
